--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-VITE_SITE_LOGO_URL = ""
-VITE_SITE_NAME = ""
+VITE_SITE_LOGO_URL = "https://aayushbharti.in/_next/static/media/ab-logo.39d6995f.svg"
+VITE_SITE_EMAIL = "freelantrios@gmail.com"
+VITE_SITE_NAME = "FreelanTrios"
 VITE_BACKEND_BASE_URL = ""
