feat: created experience code designs with animations

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ VITE_SITE_LOGO_URL = "https://aayushbharti.in/_next/static/media/ab-logo.39d6995
 VITE_SITE_EMAIL = "freelantrios@gmail.com"
 VITE_SITE_NAME = "FreelanTrios"
 VITE_BACKEND_BASE_URL = ""
+VITE_LINKEDIN_LINK = ""
+VITE_GITHUB_LINK = ""
+VITE_TWITTER_LINK = ""
