--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 VITE_SITE_LOGO_URL = ""
 VITE_SITE_NAME = ""
 VITE_BACKEND_BASE_URL = ""
+VITE_LINKEDIN_LINK = ""
+VITE_GITHUB_LINK = ""
+VITE_TWITTER_LINK = ""
